[sync] Use InMemory ModelTypeStore for pss tests

Currently the default, on-disk impl is used. This CL allows and uses
overriding the ModelTypeStore factory via pss init_params in order to
specify the use of the InMemoryStore for tests.

BUG=776762
R=skym@chromium.org

Change-Id: Ie1bf97f93f5f8b4094f7abb157c84514b724a911